Changes for PmsCalendar, added class for fix on mobile version.

--- a/com.getshop.client/apps/PmsCalendar/skin/PmsCalendar.css
+++ b/com.getshop.client/apps/PmsCalendar/skin/PmsCalendar.css
@@ -76,6 +76,7 @@
 
 .PmsCalendar .roomlistmobileouter { padding: 10px; box-sizing: border-box; }
 .PmsCalendar .bottomdesc {position:absolute; width: 100%; bottom: 0px; height: 30%; background-color:rgba(241,241,241,0.9); padding: 10px; box-sizing: border-box; }
+.PmsCalendar .bottomdescshell{border: solid 1px; background-color:#fff; text-align: center; padding-top: 2px; padding-bottom: 2px; position:absolute; bottom: -80px; width:100%;}
 .PmsCalendar .timerow {  height: 60px; padding-left: 60px; position: relative; background-color:#fff; padding-bottom: 2px; }
 .PmsCalendar .timerow .timebox {background-color:rgba(241,241,241,1); line-height: 61px; width: 58px; display:inline-block; position:absolute; left:0px; text-align: center; }
 .PmsCalendar .timerow .halfourbox { width: 100%; display:inline-block; margin-bottom: 1px; box-sizing: border-box; height: 29px; float:left; background-color:rgba(241,241,241,1);}
